# PP

./: .gitignore  README.md
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  bmp.h  main.cpp  statistics.xlsx
lab3/: CMakeLists.txt  PP_lab3.xlsx  main.cpp
lab4/: CMakeLists.txt  PP_lab4.xlsx  bmp.h  main.cpp
lab5/: CMakeLists.txt  main.cpp  main_2.cpp  synchronize-start-2.bat  synchronize-start.bat
lab6/: .clang-format  CMakeLists.txt  main.cpp  main_v2.cpp  main_v3.cpp  main_v4.cpp  task_2_main.cpp  task_3_main.cpp  timeElapsed.txt
lab7/: lab7.sln
lab7/Task1/: Program.cs
lab7/Task2/: Program.cs
